Added game of thrones photos and added to db seed

--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -49,7 +49,7 @@
           <% if event.date.nil? %>
           Unknown
           <% else %>
-          <%= event.date.strftime('%B %-d, %Y') %>
+          <%= event.date.strftime('%B %-d, %-Y') %>
           <% end %>
         </td>
         <td class="span1">
