--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -35,6 +35,14 @@
     <%= f.label :street_address %><br>
     <%= f.text_field :street_address %>
   </div>
+  <div class="field">
+    <%= f.label :lat %><br>
+    <%= f.text_field :lat %>
+  </div>
+  <div class="field">
+    <%= f.label :lon %><br>
+    <%= f.text_field :lon %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
