--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -69,7 +69,7 @@
         <% if @person.mother %>
           <p><%= link_to @person.mother.full_name, @person.mother%></p>
         <% else %>
-          <p><%= link_to edit_person_path, :class => 'btn btn-primary' do %><i class="icon-plus icon-white"></i> Add Mother<%end%></p>
+          <p><%= link_to edit_person_path(@person), :class => 'btn btn-primary' do %><i class="icon-plus icon-white"></i> Add Mother<%end%></p>
         <% end %>
       </dd>
       <dt>Father</dt>
@@ -77,7 +77,7 @@
         <% if @person.father %>
           <p><%= link_to @person.father.full_name, @person.father%></p>
         <% else %>
-          <p><%= link_to edit_person_path, :class => 'btn btn-primary' do %><i class="icon-plus icon-white"></i> Add Father<%end%></p>
+          <p><%= link_to edit_person_path(@person), :class => 'btn btn-primary' do %><i class="icon-plus icon-white"></i> Add Father<%end%></p>
         <% end %>
       </dd>
       <% @children.each do |child| %>
