--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,6 @@
 	</div>
 	<%= render 'layouts/footer' %>
 	<br />
-	<%= debug(params) if Rails.env.development? %>
+<!--	<%= debug(params) if Rails.env.development? %> -->
 </body>
 </html>
