--- a/app/views/people/stats.html.erb
+++ b/app/views/people/stats.html.erb
@@ -146,3 +146,44 @@
         </script>
     </div>
 </div>
+<div id='word-cloud'>
+    <h4>Name Frequency Word Cloud</h4>
+    <div class="chart">
+
+        <script src="/app/assets/javascripts/d3.layout.cloud.js"></script>
+        <script>
+          var fill = d3.scale.category20();
+        
+          d3.layout.cloud().size([600, 600])
+              .words(<%=@words.to_s.html_safe %>
+                .map(function(d) {
+                return {text: d, size: 10 + Math.random() * 90};
+              }))
+              .padding(5)
+              .rotate(function() { return ~~(Math.random() * 2) * 90; })
+              .font("Impact")
+              .fontSize(function(d) { return d.size; })
+              .on("end", draw)
+              .start();
+        
+          function draw(words) {
+            d3.select("#word-cloud>.chart").append("svg")
+                .attr("width", 600)
+                .attr("height", 600)
+              .append("g")
+                .attr("transform", "translate(300,300)")
+              .selectAll("text")
+                .data(words)
+              .enter().append("text")
+                .style("font-size", function(d) { return d.size + "px"; })
+                .style("font-family", "Impact")
+                .style("fill", function(d, i) { return fill(i); })
+                .attr("text-anchor", "middle")
+                .attr("transform", function(d) {
+                  return "translate(" + [d.x, d.y] + ")rotate(" + d.rotate + ")";
+                })
+                .text(function(d) { return d.text; });
+          }
+        </script>
+    </div>
+</div>
