--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,11 @@
   <%= render 'layouts/shim' %>
 </head>
 <body>
-	
+
 	<%= render 'layouts/header' %>
 	<div class='container'>
-		<% flash.each do |key, value| %>
-			<div class="alert alert-<%= key %>"><%= value %></div>
-		<% end %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 		<%= content_for?(:content) ? yield(:content) : yield %>
 	</div>
 	<%= render 'layouts/footer' %>
