--- a/app/views/layouts/_account_dropdown.html.erb
+++ b/app/views/layouts/_account_dropdown.html.erb
@@ -3,7 +3,7 @@
     Account <b class="caret"></b>
   </a>
   <ul class="dropdown-menu">
-    <li><%= link_to "My Account", edit_user_path(current_user) %></li>
+    <li><%= link_to "My Account", edit_user_registration_path(current_user) %></li>
     <% if ! current_user.person_id.nil? %>
     <li><%= link_to "My Person", current_user.person %></li>
     <% end %>
@@ -12,6 +12,5 @@
       <li><%= link_to "Admin", admin_path %></li>
     <% end %>
     <li class="divider"></li>
-    <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
   </ul>
 </li>
