--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
             <%= render 'layouts/account_dropdown' %>
             <li><%= link_to('Log out', destroy_user_session_path, :method => :delete) %></li>
           <% else %>
-            <%= link_to('Log in', new_user_session_path)  %>
+            <li><%= link_to('Log in', new_user_session_path)  %></li>
           <% end %>
         </ul>
       </nav>
