--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,9 @@
 
 	<%= render 'layouts/header' %>
 	<div class='container'>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <% flash.each do |type,message| %>
+      <p class="<%= type %>"><%= message %></p>
+    <% end %>
 		<%= content_for?(:content) ? yield(:content) : yield %>
 	</div>
 	<%= render 'layouts/footer' %>
