Replaced custom admin interface with active admin

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -74,6 +74,10 @@ p {
   }
 }
 
+.navbar-inner a {
+  text-decoration: none;
+}
+
 /* footer */
 
 footer {
@@ -128,4 +132,3 @@ i.icon-rings {
   height: 24px;
   width: 24px;
 }
-
