--- a/app/views/layouts/_account_dropdown.html.erb
+++ b/app/views/layouts/_account_dropdown.html.erb
@@ -7,9 +7,9 @@
     <% if ! current_user.person_id.nil? %>
     <li><%= link_to "My Person", current_user.person %></li>
     <% end %>
-    <% if signed_in? && current_user.authorized?(User::ROLE_ADMIN) %>
+    <% if signed_in? && current_user.is_admin? %>
       <li class="divider"></li>
-      <li><%= link_to "Admin", admin_path %></li>
+      <li><%= link_to "Admin", admin_dashboard_path %></li>
     <% end %>
     <li class="divider"></li>
   </ul>
