--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Help", help_path %></li>
           <li><%= link_to "About", about_path %></li>
-          <% if signed_in? %>
+          <% if user_signed_in? %>
             <%= render 'layouts/navigation_dropdown' %>
             <%= render 'layouts/account_dropdown' %>
             <li><%= link_to('Log out', destroy_user_session_path, :method => :delete) %></li>
