--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -38,14 +38,14 @@
 
 <div id="tabs" class="tab-content">
   <div id="events-tab" class="tab-pane active"> <!--id="facts-box" -->
-    <% if @eventsFormat == 'data-list' %>
+    <% if @events_format == 'data-list' %>
       <dl class="dl-horizontal">
       <% @person.events.each do |event| %>
         <dt><%= event.title_string %></dt>
         <dd><%= event.details.join('<br />').html_safe  %></dd>
       <% end %>
       </dl>
-    <% elsif @eventsFormat == 'timeline' %>
+    <% elsif @events_format == 'timeline' %>
       <%= render "timeline" %>
     <% end %>
   </div>
