--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -38,161 +38,19 @@
 
 <div id="tabs" class="tab-content">
   <div id="events-tab" class="tab-pane active"> <!--id="facts-box" -->
-    <% if @events_format == 'data-list' %>
-      <dl class="dl-horizontal">
-      <% @person.events.each do |event| %>
-        <dt><%= event.title_string %></dt>
-        <dd><%= event.details.join('<br />').html_safe  %></dd>
-      <% end %>
-      </dl>
-    <% elsif @events_format == 'timeline' %>
-      <%= render "timeline" %>
-    <% end %>
+    <%= render partial: "people/tabs/events" %>
   </div>
 
   <div id="family-tab" class="tab-pane">
-    <dl class="dl-horizontal">
-      <dt>Mother</dt>
-      <dd>
-        <% if @person.mother %>
-          <p><%= link_to @person.mother.full_name, @person.mother%></p>
-        <% else %>
-          <p><%= link_to new_person_path, :class => 'btn btn-primary' do %><i class="icon-plus icon-white"></i> Add Mother<%end%></p>
-        <% end %>
-      </dd>
-      <dt>Father</dt>
-      <dd>
-        <% if @person.father %>
-          <p><%= link_to @person.father.full_name, @person.father%></p>
-        <% else %>
-          <p><%= link_to new_person_path, :class => 'btn btn-primary' do %><i class="icon-plus icon-white"></i> Add Father<%end%></p>
-        <% end %>
-      </dd>
-      <% if ! @children.nil? %>
-        <% @children.each do |child| %>
-          <dt>Child</dt>
-          <dd>
-          <%= link_to child.full_name, child %><br>
-          </dd>
-        <% end %>
-      <% end %>
-      <br>
-      <% if ! @primary_siblings.nil? %>
-        <% @primary_siblings.each do |sibling| %>
-          <dt>Sibling</dt>
-          <dd>
-          <%= link_to sibling.full_name, sibling %><br>
-          </dd>
-        <% end %>
-      <% end %>
-      <br>
-      <% if ! @half_siblings.nil? %>
-        <% @half_siblings.each do |half_sibling| %>
-          <dt>Half Sibling</dt>
-          <dd>
-          <%= link_to half_sibling.full_name, half_sibling %><br>
-          </dd>
-        <% end %>
-      <% end %>
-
-
-    </dl>
+    <%= render partial: "people/tabs/family" %>
   </div>
 
   <div id="tree-tab" class="tab-pane">
-    <h4> Pedigree Tree </h4>
-    <div id="tree-container"></div>
-    <script src="http://d3js.org/d3.v2.min.js?2.9.4"></script>
-    <script>
-
-    var margin = {top: 0, right: 320, bottom: 0, left: 0},
-        width = 960 - margin.left - margin.right,
-        height = 500 - margin.top - margin.bottom;
-
-    var tree = d3.layout.tree()
-        .separation(function(a, b) { return a.parent === b.parent ? 1 : .5; })
-        .children(function(d) { return d.parents; })
-        .size([height, width]);
-
-    var svg = d3.select("#tree-container").append("svg")
-        .attr("width", width + margin.left + margin.right)
-        .attr("height", height + margin.top + margin.bottom)
-      .append("g")
-        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-      var json = '<%= @json_pedigree_tree.to_json.to_s.html_safe %>';
-      json = JSON.parse(json);
-      var nodes = tree.nodes(json);
-
-      var link = svg.selectAll(".link")
-          .data(tree.links(nodes))
-        .enter().append("path")
-          .attr("class", "link")
-          .attr("d", elbow);
-
-      var node = svg.selectAll(".node")
-          .data(nodes)
-        .enter().append("g")
-          .attr("class", "node")
-          .attr("transform", function(d) { return "translate(" + d.y + "," + d.x + ")"; })
-
-      node.append("text")
-          .attr("class", "name")
-          .attr("x", 8)
-          .attr("y", -6)
-          .text(function(d) { return d.name; });
-
-      node.append("text")
-          .attr("x", 8)
-          .attr("y", 8)
-          .attr("dy", ".71em")
-          .attr("class", "about lifespan")
-          .text(function(d) { return d.born + "–" + d.died; });
-
-      node.append("text")
-          .attr("x", 8)
-          .attr("y", 8)
-          .attr("dy", "1.86em")
-          .attr("class", "about location")
-          .text(function(d) { return d.location; });
-
-    function elbow(d, i) {
-      return "M" + d.source.y + "," + d.source.x
-           + "H" + d.target.y + "V" + d.target.x
-           + (d.target.children ? "" : "h" + margin.right);
-    }
-
-    </script>
-
+    <%= render partial: "people/tabs/tree" %>
   </div>
 
   <div id="map-tab" class="tab-pane">
-    <style>
-    #map {
-      height: 500px;
-    }
-    </style>
-    <script>
-      $("body").on('shown','#map-tab-link', function() {
-        map.invalidateSize(false);
-      });
-    </script>
-    <%=
-      map(:center => {
-          # TODO: Make these coords an admin setting
-          :latlng => [24.45,-27.60],
-          :zoom => 2
-      },
-      :markers => @person.markers.map{|marker|
-        {
-          :latlng => marker[:latlng],
-          :popup => '<h3 class="popup-header">' + h(marker[:title]) + '</h3><br/>' +
-                    h(marker[:place]) + '<br/>' +
-                    h(marker[:date])
-        }
-      })
-    %>
-
+    <%= render partial: "people/tabs/map" %>
   </div>
 </div>
 <br><br><br>
