--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -3,16 +3,16 @@
   <%= f.input :last_name %>
   <%= f.input :gender, collection: Person.all_genders %>
   <%= f.simple_fields_for :birth do |ff| %>
-    <%= ff.input :date %>
+    <%= ff.input :date, label: "Birth Date", include_blank: true %>
     <%= ff.simple_fields_for :place do |fff| %>
-      <%= fff.input :place_string %>
+      <%= fff.input :place_string, label: "Birth Place" %>
     <% end %>
     <%= ff.input :father_id, collection: Person.all %>
     <%= ff.input :mother_id, collection: Person.all %>
   <% end %>
   <%= f.simple_fields_for :death do |ff| %>
     <%= ff.input :dead %>
-    <%= ff.input :date %>
+    <%= ff.input :date, label: "Death Date", include_blank: true %>
     <%= ff.simple_fields_for :place do |fff| %>
       <%= fff.input :place_string %>
     <% end %>
@@ -21,8 +21,4 @@
   <%= f.input :photo %>
 
   <%= f.button :submit, :class => 'btn' %>
-
-
-  <!-- TODO: Change the following to simple_form inputs -->
-
 <% end %>
