Marriage creation done.

--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -28,3 +28,13 @@
   stroke-width: 1.5px;
 }
 
+.inline-form {
+	div.input {
+		display: inline-block;
+		width: 33%;
+
+		input {
+			width: 80%;
+		}
+	}
+}
