--- a/app/views/life_event/marriages/_form.html.erb
+++ b/app/views/life_event/marriages/_form.html.erb
@@ -1,12 +1,20 @@
 <%= simple_form_for @marriage do |f| %>
-  <%= f.association :person_1,
-    label: 'Spouse 1',
-    label_method: :full_name,
-    value_method: :id %>
-  <%= f.association :person_2,
-    label: 'Spouse 2',
-    label_method: :full_name,
-    value_method: :id  %>
+  <%= f.input :person_1_id, label: 'Spouse 1' do %>
+    <%= f.select :person_1_id,
+      [''] + Person.all.map{|p| [p.full_name,p.id]} + [['New Person', :new]] %>
+  <% end %>
+  <div id='person_1_new_person_fields' class='inline-form' style='display: none;'>
+    <%= render partial: 'people/embeddable_form', locals: {f:f, person_field_id: :person_2} %>
+  </div>
+
+  <%= f.input :person_2_id, label: 'Spouse 2' do %>
+    <%= f.select :person_2_id,
+      [''] + Person.all.map{|p| [p.full_name,p.id]} + [['New Person', :new]] %>
+  <% end %>
+  <div id='person_2_new_person_fields' class='inline-form' style='display: none;'>
+    <%= render partial: 'people/embeddable_form', locals: {f:f, person_field_id: :person_2} %>
+  </div>
+
 
   <%= f.input :date %>
 
