Got marriage edit working
Note, this does not include an actual edit link. I need to figure out where that will go in the UI.

--- a/app/views/life_event/marriages/show.html.erb
+++ b/app/views/life_event/marriages/show.html.erb
@@ -6,7 +6,7 @@
 
 <div class='marriage-details'>
   <span class='marriage-date'>
-    <%= @marriage.date %>
+    <%= @marriage.date.formatted %>
   </span>
 </div>
 
