--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -1,7 +1,7 @@
-<% provide(:title, "Editing " + @person.full_name) %>
+<% provide(:title, "Editing " + person.full_name) %>
 <h1>Editing person</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @person %> |
+<%= link_to 'Show', person %> |
 <%= link_to 'Back', people_path %>
