--- a/app/views/people/tabs/_timeline.html.erb
+++ b/app/views/people/tabs/_timeline.html.erb
@@ -4,7 +4,7 @@
     <th></th>
     <th>Details</th>
   </tr>
-<% @person.events.each do |event| %>
+<% person.events.each do |event| %>
   <tr>
     <td class="span4">
       <%= event.date_string %>
