--- a/app/views/people/tabs/_details.html.erb
+++ b/app/views/people/tabs/_details.html.erb
@@ -8,7 +8,7 @@
   <% person.events.each do |event| %>
     <tr id='<%= dom_id(event) %>'>
       <td class="span2"><%= event.title_string %></td>
-      <td class="span12"><%= event.details.join('<br />').html_safe %></td>
+      <td class="span12"><%= event.details_html %></td>
       <td class="span2">
         <% if path_exists?([:edit, event]) %>
           <%= link_to [:edit, event],
