--- a/app/views/people/tabs/_timeline.html.erb
+++ b/app/views/people/tabs/_timeline.html.erb
@@ -9,7 +9,7 @@
     <td class="span4">
       <%= event.date_string %>
       <br />
-      <%= event.place.place_string %>
+      <%= event.place.string %>
     </td>
     <td class="span1">
       <i class="icon <%= event.try(:icon_class) %>"></i>
